[package]
name = "solana-escrow-plus"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
arrayref = "0.3.7"
solana-program = "1.15.2"
spl-associated-token-account = { version="1.1.3", features = [ "no-entrypoint" ] }
spl-token = {version = "3.5.0",features = ["no-entrypoint"]}
strum_macros = "0.24.3"
[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
